--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,21 @@
 @import url("reset.css");
 
 html {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-	color: #333333;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 16px;
-	line-height: 1.6;
-	background-color: #f9f9f9;
+  display: flex;
+  color: #333333;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  background-color: black;
+  height: 100vh;
+  padding: 2px;
+  align-items: center;
+  justify-content: center;
 }
 
 h1,
@@ -19,56 +24,110 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Courier New", Courier, monospace;
-	font-weight: bold;
-	line-height: 1;
-	text-transform: uppercase;
-	margin: 0 0 1.6rem;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  line-height: 4;
+  text-transform: uppercase;
+  margin: 0 0 1.6rem;
 }
 
 p {
-	font-family: Arial, Helvetica, sans-serif;
-	line-height: 1.6;
-	margin: 0 0 1.6rem;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.6;
+  margin: 0 0 1.6rem;
+}
+.quote {
+  text-align: center;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+  line-height: 2.2;
+  font-size: 2em;
+  color: white;
+}
+.poet {
+  display: block; /* Forces the poet's name onto a new line */
+  margin-top: -3em; /* Optional: add space between the quote and the poet's name */
+  font-style: italic; /* Optional: style the poet's name */
+}
+.large-quote-start {
+  font-size: 100px; /* Make the quote mark large */
+  font-family: "Times New Roman", Times, sans-serif, sans-serif;
+  font-weight: bold;
+  color: white; /* Optional: Change the color of the quotation mark */
+  /*position:absolute; /* Position relative to the container */
+  text-align: initial;
+}
+.large-quote-end {
+  font-size: 100px; /* Make the quote mark large */
+  font-family: Georgia, "Times New Roman", Times, serif, serif;
+  font-weight: bold;
+  color: white; /* Optional: Change the color of the quotation mark */
+  /*position:absolute; /* Position relative to the container */
+  text-align: end;
 }
 
 a {
-	color: #0056b3;
-	border-bottom: 2px solid transparent;
-	transition: all 0.5s ease-in-out;
+  color: #0056b3;
+  border-bottom: 2px solid transparent;
+  transition: all 0.5s ease-in-out;
 }
 
 a:hover {
-	color: #002348;
-	border-bottom: 2px solid #002348;
+  color: #002348;
+  border-bottom: 2px solid #002348;
 }
 
 hr {
-	margin: 3.2rem 1.6rem;
-	color: #555555;
-	border-color: #555555;
+  margin: 3.2rem 1.6rem;
+  color: #555555;
+  border-color: #555555;
 }
 
 /* Layout */
 
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5px;
+  margin: 0 auto;
+  width: 90%;
+  height: 520px;
+  background: linear-gradient(to bottom, rgb(185, 17, 157),  rgb(4, 94, 191));
+}
+
 .container {
-	padding: 0;
-	margin: 0 auto;
-	width: 100%;
-	max-width: 1000px;
+  display: flex;
+  flex-direction: column; /* Stack the quote and poet vertically */
+  text-align: center;
+  justify-content: center; /* Vertically center the content */
+  align-items: center; /* Horizontally center the content */
+  padding: 20px; /* Adjust padding to make it smaller */
+  margin: 0 auto;
+  width: 90%; /* Set width smaller than .main */
+  height: 90%; /* Set height smaller than .main */
+  box-sizing: border-box;
+  border: 2px solid white;
+  /*display: flex;
+  text-align: center;
+  justify-content: center; 
+  align-items: center;
+  flex-direction: row; 
+  padding: 10px;
+  margin: 0 auto;
+  height: 80%;
+  width: 90%;
+  box-sizing: border-box;
+  border: 2px solid white; */
 }
 
 /* Media Queries */
 
 @media (min-width: 699px) {
-
-	/* CSS HERE */
-
+  /* CSS HERE */
 }
 
 /* Desktop Media Query */
 @media (min-width: 999px) {
-
-	/* CSS HERE */
-
+  /* CSS HERE */
 }
